--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:onClick="goToLogin"
-            android:text="去登陆"
+            android:text="立即体验"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="40dp"
