--- a/app/src/main/res/layout/activity_user_basic_info.xml
+++ b/app/src/main/res/layout/activity_user_basic_info.xml
@@ -56,6 +56,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"/>
             <TextView
+                android:id="@+id/tv_account_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="账户名称"
@@ -84,6 +85,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"/>
             <TextView
+                android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="羊宝宝"
@@ -112,6 +114,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"/>
             <TextView
+                android:id="@+id/tv_mobilephone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12345678901"
@@ -127,34 +130,35 @@
                 android:layout_marginLeft="20dp"
                 android:layout_alignParentBottom="true"/>
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="#fff">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="座机号"
-                android:textColor="#919191"
-                android:textSize="15sp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0521-8888888"
-                android:textColor="#111111"
-                android:textSize="15sp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#F1F4FE"
-                android:layout_marginLeft="20dp"
-                android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="52dp"-->
+            <!--android:background="#fff">-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="座机号"-->
+                <!--android:textColor="#919191"-->
+                <!--android:textSize="15sp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginLeft="20dp"/>-->
+            <!--<TextView-->
+                <!--android:id="@+id/tv_telephone"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="0521-8888888"-->
+                <!--android:textColor="#111111"-->
+                <!--android:textSize="15sp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginRight="20dp"/>-->
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="2dp"-->
+                <!--android:background="#F1F4FE"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:layout_alignParentBottom="true"/>-->
+        <!--</RelativeLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -169,6 +173,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"/>
             <TextView
+                android:id="@+id/tv_service_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="上海国烨跨境电子商务有限公司"
