--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.guoyie.www.delivery.easy.activity.FilterActivity">
+    tools:context="com.guoyie.www.delivery.easy.activity.StoreFilterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
