--- a/app/src/main/res/layout/fc_usercenter.xml
+++ b/app/src/main/res/layout/fc_usercenter.xml
@@ -57,6 +57,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_gravity="center"/>
                     <TextView
+                        android:id="@+id/tv_service_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="管理员"
@@ -65,6 +66,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/tv_service_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ll_name"
