--- a/app/src/main/res/layout/activity_interdetail.xml
+++ b/app/src/main/res/layout/activity_interdetail.xml
@@ -135,85 +135,11 @@
                android:text="商品明细"
                style="@style/tv_title_itmes"/>
 
-
-           <LinearLayout
-               android:orientation="vertical"
-               android:padding="16dp"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-
-               <RelativeLayout
+               <GridLayout
+                   android:orientation="vertical"
+                   android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-
-                   <TextView
-                       android:textSize="14sp"
-                       android:textColor="#111111"
-                       android:id="@+id/tv_name"
-                       android:layout_width="wrap_content"
-                       android:text="丙乙烯 | 1000.00吨"
-                       android:layout_height="wrap_content"/>
-
-                   <TextView
-                       android:textSize="14sp"
-                       android:textColor="#111111"
-                       android:layout_alignParentRight="true"
-                       android:text="内贸内销"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"/>
-
-
-                   <TextView
-                       android:id="@+id/tv_rmark"
-                       android:layout_marginTop="12dp"
-                       android:textSize="14sp"
-                       android:textColor="#919191"
-                       android:text="备注 ：今天是2017年12月7日，距离项目开发时间还有一个月了"
-                       android:layout_below="@+id/tv_name"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"/>
-               </RelativeLayout>
-
-              <View
-                  android:layout_marginTop="10dp"
-                  android:layout_width="match_parent"
-                  android:background="#F7F7F7"
-                  android:layout_height="1dp"/>
-
-
-
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-
-                   <TextView
-                       android:textSize="14sp"
-                       android:textColor="#111111"
-                       android:id="@+id/tv_name1"
-                       android:layout_width="wrap_content"
-                       android:text="丙乙烯 | 1000.00吨"
-                       android:layout_height="wrap_content"/>
-
-                   <TextView
-                       android:textSize="14sp"
-                       android:textColor="#111111"
-                       android:layout_alignParentRight="true"
-                       android:text="内贸内销"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"/>
-
-
-                   <TextView
-                       android:layout_marginTop="12dp"
-                       android:textSize="14sp"
-                       android:textColor="#919191"
-                       android:text="备注 ：今天是2017年12月7日，距离项目开发时间还有一个月了"
-                       android:layout_below="@+id/tv_name1"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"/>
-               </RelativeLayout>
-           </LinearLayout>
-
+                   android:layout_height="wrap_content"/>
 
            <!--入库单详细信息-->
            <TextView
