--- a/app/src/main/res/layout/store_manager_item.xml
+++ b/app/src/main/res/layout/store_manager_item.xml
@@ -70,6 +70,7 @@
             android:background="@drawable/textview_bg"/>
 
         <TextView
+            android:id="@+id/tv_store_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="保税"
