--- a/app/src/main/res/layout/store_manager_item.xml
+++ b/app/src/main/res/layout/store_manager_item.xml
@@ -33,7 +33,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#F1F4FE"/>
+        android:background="#F1F4FE"
+        android:layout_marginLeft="13dp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
