--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -33,6 +33,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_store_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12344556"
@@ -63,6 +64,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_goods_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12344556"
@@ -92,6 +94,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_store_capacity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12344556"
@@ -121,6 +124,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_store_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12344556"
@@ -150,6 +154,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_store_material"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12344556"
