--- a/app/src/main/res/layout/store_capacity_manager_item.xml
+++ b/app/src/main/res/layout/store_capacity_manager_item.xml
@@ -8,89 +8,85 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp">
+        android:padding="13dp">
         <TextView
             android:id="@+id/tv_store_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="储罐号 :"
-            android:textColor="#919191"
-            android:textSize="11sp"
-            android:layout_centerVertical="true"/>
+            android:text="储罐号"
+            android:textSize="15sp"
+            android:textColor="#111111"/>
         <TextView
+            android:id="@+id/tv_store_number_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12344556"
-            android:textColor="#111111"
-            android:textSize="11sp"
             android:layout_toRightOf="@id/tv_store_number"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:id="@+id/tv_empty_capacity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="空容数量 ："
-            android:textColor="#111111"
-            android:textSize="16sp"
-            android:layout_centerVertical="true"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="12344556"
-            android:textColor="#111111"
-            android:textSize="16sp"
-            android:layout_toRightOf="@id/tv_empty_capacity"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="10dp"
+            android:text="储罐号"
+            android:textSize="15sp"
+            android:textColor="#111111"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/right"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:id="@+id/tv_store_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="商品品名 ："
-            android:textColor="#919191"
-            android:textSize="13sp"
-            android:layout_centerVertical="true"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="和氏璧"
-            android:textColor="#919191"
-            android:textSize="13sp"
-            android:layout_toRightOf="@id/tv_store_name"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"/>
-    </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="14dp"
         android:background="#F1F4FE"
-        android:layout_alignParentBottom="true"/>
+        android:layout_marginLeft="13dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="13dp">
+        <TextView
+            android:id="@+id/tv_capacity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="空容数量"
+            android:textColor="#666666"
+            android:textSize="15sp"/>
+        <TextView
+            android:id="@+id/tv_goods_name_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_capacity"
+            android:text="100吨"
+            android:textColor="#666666"
+            android:textSize="15sp"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/tv_goods_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="商品品名"
+            android:textColor="#666666"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp"
+            android:layout_marginTop="10dp"
+            android:textSize="10dp"
+            android:layout_below="@id/tv_capacity" />
+
+        <TextView
+            android:id="@+id/tv_store_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="查克拉"
+            android:textColor="#666666"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp"
+            android:layout_marginTop="30.5dp"
+            android:textSize="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/tv_goods_name" />
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:background="#F1F4FE"/>
 </LinearLayout>
