--- a/app/src/main/res/layout/activity_transtomrdetal.xml
+++ b/app/src/main/res/layout/activity_transtomrdetal.xml
@@ -45,7 +45,7 @@
                             android:text="状态"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_state"
+                            android:id="@+id/status"
                             android:text="待审核"
                             android:textColor="@color/app_color_blue"
                             style="@style/tv_content_inter"/>
@@ -57,7 +57,7 @@
                             android:text="创建时间"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_set_time"
+                            android:id="@+id/create_at"
                             android:text="2018/12/31"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -66,10 +66,10 @@
                     <LinearLayout
                         style="@style/ll_interorder">
                         <TextView
-                            android:text="货转单号"
+                            android:text="预约货转单号"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_troms_list"
+                            android:id="@+id/transstock_customer_no"
                             android:text="123314566"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -82,7 +82,7 @@
                             android:text="转让方"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_seller"
+                            android:id="@+id/shop_sale_company_name"
                             android:text="上海国烨跨境电子商务有限公司"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -94,7 +94,7 @@
                             android:text="企业联系人"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_company_cotract"
+                            android:id="@+id/sale_contact_name"
                             android:text="方庆阳"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -106,7 +106,7 @@
                             android:text="联系方式"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_contact_way"
+                            android:id="@+id/sale_contact"
                             android:text="1101191201212"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -118,7 +118,7 @@
                             android:text="受让方"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_buyer"
+                            android:id="@+id/shop_buy_company_name"
                             android:text="上海中烨跨境电子商务有限公司"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -131,7 +131,7 @@
                             android:text="企业联系人"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_buyer_person"
+                            android:id="@+id/buy_contact_name"
                             android:text="方庆阳"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -143,7 +143,7 @@
                             android:text="联系方式"
                             style="@style/tv_title_inter"/>
                         <TextView
-                            android:id="@+id/tv_buyer_phone"
+                            android:id="@+id/buy_contact"
                             android:text="1101191201212"
                             style="@style/tv_content_inter"/>
                     </LinearLayout>
@@ -162,53 +162,11 @@
                     style="@style/tv_title_itmes"/>
 
 
-                <LinearLayout
+                <GridLayout
                     android:orientation="vertical"
-                    android:padding="16dp"
+                    android:id="@+id/gridLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <View
-                        android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:background="#F7F7F7"
-                        android:layout_height="1dp"/>
-
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:textSize="14sp"
-                            android:textColor="#111111"
-                            android:id="@+id/tv_name1"
-                            android:layout_width="wrap_content"
-                            android:text="丙乙烯 | 1000.00吨"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:textSize="14sp"
-                            android:textColor="#111111"
-                            android:layout_alignParentRight="true"
-                            android:text="内贸内销"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-
-                        <TextView
-                            android:layout_marginTop="12dp"
-                            android:textSize="14sp"
-                            android:textColor="#919191"
-                            android:text="备注 ：今天是2017年12月7日，距离项目开发时间还有一个月了"
-                            android:layout_below="@+id/tv_name1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </RelativeLayout>
-                </LinearLayout>
-
+                    android:layout_height="wrap_content"/>
 
                 <!--入库单详细信息-->
                 <TextView
@@ -229,6 +187,7 @@
                             android:text="免仓期"
                             style="@style/tv_title_inter"/>
                         <TextView
+                            android:id="@+id/buy_freeday"
                             android:text="2017-12-31至2018-01-01"
 
                             style="@style/tv_content_inter"/>
@@ -236,6 +195,7 @@
 
                     <!-- 3-->
                     <LinearLayout
+                        android:id="@+id/ll_ca_viewpath"
                         style="@style/ll_interorder">
                         <TextView
                             android:text="单据"
@@ -277,7 +237,8 @@
 
 
         <LinearLayout
-
+            android:visibility="gone"
+            android:id="@+id/ll_agree_refused"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="48dp">
