--- a/app/src/main/res/layout/fc_usercenter.xml
+++ b/app/src/main/res/layout/fc_usercenter.xml
@@ -117,6 +117,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/ll_contact"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="#fff">
@@ -154,6 +155,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/ll_login_out"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="#fff">
