--- a/app/src/main/res/layout/activity_transtomrdetal.xml
+++ b/app/src/main/res/layout/activity_transtomrdetal.xml
@@ -162,11 +162,43 @@
                     style="@style/tv_title_itmes"/>
 
 
-                <GridLayout
-                    android:orientation="vertical"
-                    android:id="@+id/gridLayout"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:paddingTop="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingLeft="16dp"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:textSize="14sp"
+                        android:textColor="#111111"
+                        android:id="@+id/goods_name"
+                        android:layout_width="wrap_content"
+                        android:text="丙乙烯 | 1000.00吨"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/goods_nature"
+                        android:textSize="14sp"
+                        android:textColor="#111111"
+                        android:layout_alignParentRight="true"
+                        android:text="内贸内销"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                        android:id="@+id/remark"
+                        android:layout_marginTop="12dp"
+                        android:textSize="14sp"
+                        android:textColor="#919191"
+                        android:text="备注 ：今天是2017年12月7日，距离项目开发时间还有一个月了"
+                        android:layout_below="@+id/goods_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </RelativeLayout>
+
+
 
                 <!--入库单详细信息-->
                 <TextView
